--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "crypto-js": "^4.2.0",
     "firebase": "^12.0.0",
+    "flowbite-react": "^0.12.7",
     "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
