--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
     "react-secure-storage": "^1.3.2",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "tailwindcss": "^4.1.11",
